--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@ xmlns:th="http://www.thymeleaf.org"
     <title>Title</title>
 </head>
 <body>
-<h2>th:text="${title}"</h2>
+<h2 th:text="${title}"></h2>
 
 </body>
 </html>
