--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@ xmlns:th="http://www.thymeleaf.org"
     <div class="container">
         <div class="row">
             <div class="col-sm-4 py-2 box-shadow" th:each="entry : ${posts}">
-                <img class="card-img-top" th:src="'https://picsum.photos/id/'+${entry.getId()}+'/500/350'" alt="Post Title Image">
+                <a class="post-url" th:href="@{'/post/' + ${entry.getId()}}"<img class="card-img-top" th:src="'https://picsum.photos/id/'+${entry.getId()}+'/500/350'" alt="Post Title Image">></a>
                 <div class="card-body">
                     <div class="card-title" th:text="${entry.getTitle()}"></div>
                     <p class="card-text" th:text="${entry.getLead()}"></p>
@@ -29,3 +29,8 @@ xmlns:th="http://www.thymeleaf.org"
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+Se facciamo clic su un post del blog,
+vogliamo acquisire l'ID del post come parametro di query.
+In home.html, avvolgi il <img class="card-img-top" ...>tag in un tag di ancoraggio
+<a>con class="post-url"e questo attributo Foglia di timo:th:href="@{'/post/' + ${entry.getId()}}"
